# cprob

./: CMakeLists.txt  base.c  base.h  basic.c  bernoulli.c  bernoulli.h  binomial.c  binomial.h  geometric.c  geometric.h  pascal.c  pascal.h  poisson.c  poisson.h  test.c  test.h  test_base.c  test_basic.c  test_bernoulli.c  test_binomial.c  test_geometric.c  test_pascal.c  test_poisson.c
